--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,10 +1,9 @@
 name: Scrape ForexFactory Calendar
 
 on:
+  workflow_dispatch: # Manual trigger button
   schedule:
-    # Runs every Monday at 6 AM UTC
-    - cron: '0 6 * * 1'
-  workflow_dispatch: # Allow manual trigger from GitHub UI
+    - cron: '0 6 * * 1' # Weekly on Monday at 6 AM UTC (optional)
 
 jobs:
   scrape:
