--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -13,6 +13,9 @@ on:
   schedule:
     - cron: '0 6 * * 1' # Weekly on Monday at 6 AM UTC (optional)
 
+permissions:
+  contents: write
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
