--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,64 +1,11 @@
-name: Scrape ForexFactory Calendar
+name: disabled
 
 on:
   workflow_dispatch:
-    inputs:
-      start_date:
-        description: 'Start date YYYY-MM-DD'
-        required: false
-      days:
-        description: 'Days to scrape'
-        required: false
-        default: '7'
-      end_date:
-        description: 'End date YYYY-MM-DD (overrides days if set)'
-        required: false
-  schedule:
-    - cron: '0 6 * * 1' # Weekly on Monday at 6 AM UTC (optional)
-
-permissions:
-  contents: write
+    inputs: {}
 
 jobs:
-  scrape:
+  noop:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-    
-    - name: Install Chrome
-      uses: browser-actions/setup-chrome@latest
-    
-    - name: Install dependencies
-      run: |
-        pip install selenium beautifulsoup4 webdriver-manager
-    
-    - name: Run scraper
-      run: |
-        ARGS=""
-        if [ -n "${{ github.event.inputs.start_date }}" ]; then ARGS="$ARGS --start-date ${{ github.event.inputs.start_date }}"; fi
-        if [ -n "${{ github.event.inputs.days }}" ]; then ARGS="$ARGS --days ${{ github.event.inputs.days }}"; fi
-        if [ -n "${{ github.event.inputs.end_date }}" ]; then ARGS="$ARGS --end-date ${{ github.event.inputs.end_date }}"; fi
-        echo "Running: python scraper.py $ARGS"
-        python scraper.py $ARGS
-    
-    - name: Commit and push if changed
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        REPO: ${{ github.repository }}
-        BRANCH: ${{ github.ref_name }}
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "github-actions[bot]"
-        git add -A
-        git diff --quiet && git diff --staged --quiet || git commit -m "Update forex calendar data [skip ci]"
-        # Ensure we are up to date and push with explicit token auth
-        git pull --rebase "https://x-access-token:${GH_TOKEN}@github.com/${REPO}.git" ${BRANCH} || true
-        git push "https://x-access-token:${GH_TOKEN}@github.com/${REPO}.git" HEAD:${BRANCH}
+      - run: echo "This workflow is disabled; scraping is handled by Netlify Functions."
