--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "forex-factory-scraper-site",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12"
