--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   functions = "netlify/functions"
 
 [functions]
-  node_bundler = "esbuild"
+  node_bundler = "none"
 
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
